Mon Feb 14 16:52:24 2000  David L. Levine  <levine@cs.wustl.edu>

        * include/makeinclude/platform_linux_cxx.GNU:
          no longer need to explicitly link all of the
          template instantiation files into shared libs.
          -shared works properly with T6.3-003.

Mon Feb 14 12:21:01 2000  Chad Elliott  <elliott_c@ociweb.com>

        * ace/config-hpux-11.x-hpc++.h

          Added a conditional include for the KCC common include file.
          Modified the values of ACE_HAS_EXCEPTIONS and
          ACE_LACKS_LINEBUFFERED_STREAMBUF to match those of the KCC
          common header.  This will not affect non-KCC builds on HP.

        * include/makeinclude/platform_hpux_kcc.GNU

          Added this file for building on HPUX with KCC.

        * include/makeinclude/platform_sunos5_kcc.GNU

          Modified to allow building static libraries.

        * include/makeinclude/platform_linux_kcc.GNU

          Modified to allow building static libraries.

Mon Feb 14 08:43:31 2000  Ossama Othman  <ossama@uci.edu>

        * acconfig.h:

          Changed ACE_HAS_POSITION_INDEPENDENT_MALLOC macro to
          ACE_HAS_POSITION_INDEPENDENT_POINTERS since the name changed in
          ACE as well.

        * configure.in (AC_LANG_CPLUSPLUS):

          Set the test language to C++ earlier in the configure script to
          make sure all tests are done using the C++ compiler.

          (ACE_CONFIGURATION_OPTIONS, ACE_COMPILATION_OPTIONS):

          Moved configure script option macros to new `m4/ace.m4' M4
          macros file.

          (ACE_TEMPLATES_REQUIRE_SOURCE,
           ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION,
           ACE_HAS_TEMPLATE_INSTANTIATION_PRAGMA):

          Overhauled the tests for these macros.  Since there may be a
          tight dependency between some of these macros, the
          ACE_TEMPLATES_REQUIRE_SOURCE test also tests if either of the
          other two macros are required.  This fixes a problem that was